--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -75,7 +75,8 @@
     "gulp-posthtml": "^3.0.4",
     "gulp-replace": "^1.0.0",
     "html-webpack-plugin": "^4.2.1",
-    "postcss-rtl": "^1.4.0",
+    "postcss": "^7.0.29",
+    "postcss-rtl": "^1.7.3",
     "posthtml-postcss": "^0.2.6",
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1",
