--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -48,6 +48,7 @@
     "eventemitter3": "^2.0.3",
     "express": "^4.16.3",
     "jsonic": "^0.3.1",
+    "lit-element": "^2.3.1",
     "node-forge": "^0.7.1",
     "request": "^2.87.0",
     "request-lite": "^2.40.1",
