--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -47,6 +47,7 @@
     "electron-updater": "^4.1.2",
     "eventemitter3": "^2.0.3",
     "express": "^4.16.3",
+    "intl-messageformat": "^7",
     "jsonic": "^0.3.1",
     "lit-element": "^2.3.1",
     "node-forge": "^0.7.1",
