--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -11,11 +11,11 @@
   ],
   "dependencies": {
     "ShadowsocksConfig": "Jigsaw-Code/outline-shadowsocksconfig#^v0.0.9",
+    "follow-redirects": "^1.11.0",
     "ip-regex": "^4.1.0",
     "js-yaml": "^3.12.0",
     "prom-client": "^11.1.3",
     "randomstring": "^1.1.5",
-    "request-lite": "^2.40.1",
     "restify": "^8.5.1",
     "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.2",
