Bundle docker entry point script in server build

--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -64,6 +64,4 @@ WORKDIR /opt/outline-server
 COPY src/shadowbox/package.json .
 COPY --from=build /build/shadowbox/ .
 
-COPY src/shadowbox/docker/cmd.sh /
-
-CMD /cmd.sh
+CMD ./cmd.sh
