--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,6 @@ stages:
     if: type = cron
   - name: Test
     if: type != cron
-  - name: "Server Integration Test"
-    if: type != cron
   - name: "deploy"
     if: tag =~ ^server-
   - name: "Manager Release"
@@ -50,6 +48,7 @@ jobs:
     # cost, we combine test and build commands for all components into one fast
     # stage.
     - stage: Test
+      name: Unit Tests
       script:
         - yarn do metrics_server/build
         - yarn do sentry_webhook/build
@@ -61,7 +60,7 @@ jobs:
         - yarn do server_manager/web_app/test
 
     - stage: Test
-      name: "Server Integration Test"
+      name: Server Integration Test
       sudo: required
       services: docker
       script:
