--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ jobs:
     - stage: Test
       name: Unit Tests
       script:
+        - yarn lint
         - yarn do metrics_server/build
         - yarn do sentry_webhook/build
         - yarn do shadowbox/server/build
