Exclude web app tests

--- a/src/server_manager/tsconfig.json
+++ b/src/server_manager/tsconfig.json
@@ -5,7 +5,8 @@
     "**/*.ts"
   ],
   "exclude": [
+    "node_modules",
     "web_app/galery_app",
-    "node_modules"
+    "web_app/app.spec.ts"
   ]
 }
