Fix metrics server test

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ jobs:
       script:
         - yarn lint
         - yarn do metrics_server/build
+        - yarn do metrics_server/test
         - yarn do sentry_webhook/build
         - yarn do shadowbox/server/build
         - yarn do shadowbox/test
