--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -47,6 +47,8 @@
     "electron-updater": "^4.1.2",
     "eventemitter3": "^2.0.3",
     "express": "^4.16.3",
+    "google-auth-library": "^6.1.0",
+    "googleapis": "^60.0.1",
     "intl-messageformat": "^7",
     "jsonic": "^0.3.1",
     "lit-element": "^2.3.1",
