--- a/src/server_manager/tsconfig.json
+++ b/src/server_manager/tsconfig.json
@@ -10,5 +10,8 @@
     // FIXME: these tests fail with a runtime error because app.ts depends on
     // polymer, which targets the browser and uses ES6 imports.
     "web_app/app.spec.ts"
-  ]
+  ],
+  "compilerOptions": {
+    "lib": ["DOM", "ES5", "ES2015", "ES2020"],
+  }
 }
