--- a/src/server_manager/tsconfig.json
+++ b/src/server_manager/tsconfig.json
@@ -12,6 +12,8 @@
     "web_app/app.spec.ts"
   ],
   "compilerOptions": {
+    // Each language level here adds additional features on top of the last -- see
+    // https://www.typescriptlang.org/tsconfig#lib for details.
     "lib": ["DOM", "ES5", "ES2015", "ES2020"],
   }
 }
