--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -310,35 +310,40 @@ paths:
         '400':
           description: Invalid request
   /experimental/access-key-data-limit:
-    put:
-      description: Sets a data transfer limit for all access keys
-      tags:
-        - Access Key
-        - Limit
-      requestBody:
-        required: true
-        content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DataLimit"
-              examples:
-                '0':
-                  value: "{limit: {bytes: 10000}}"
-      responses:
-        '204':
-          description: Access key data limit set successfully
-        '400':
-          description: Invalid data limit
-    delete:
-      description: Removes the access key data limit, lifting data transfer restrictions on all access keys.
-      tags:
-        - Access Key
-        - Limit
-      responses:
-        '204':
-          description: Access key limit deleted successfully.
+    $ref: "#/components/resources/DefaultDataLimit"
+  /access-key-data-limit:
+    $ref: "#/components/resources/DefaultDataLimit"
 
 components:
+  resources:
+    DefaultDataLimit:
+      put:
+        description: Sets a data transfer limit for all access keys
+        tags:
+          - Access Key
+          - Limit
+        requestBody:
+          required: true
+          content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/DataLimit"
+                examples:
+                  '0':
+                    value: "{limit: {bytes: 10000}}"
+        responses:
+          '204':
+            description: Access key data limit set successfully
+          '400':
+            description: Invalid data limit
+      delete:
+        description: Removes the access key data limit, lifting data transfer restrictions on all access keys.
+        tags:
+          - Access Key
+          - Limit
+        responses:
+          '204':
+            description: Access key limit deleted successfully.
   schemas:
     Server:
       properties:
