--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -311,7 +311,8 @@ paths:
           description: Invalid request
   /experimental/access-key-data-limit:
     put:
-      description: Sets a data transfer limit for all access keys
+      deprecated: true
+      description: (Deprecated) Sets a data transfer limit for all access keys
       tags:
         - Access Key
         - Limit
@@ -330,7 +331,8 @@ paths:
         '400':
           description: Invalid data limit
     delete:
-      description: Removes the access key data limit, lifting data transfer restrictions on all access keys.
+      deprecated: true
+      description: (Deprecated) Removes the access key data limit, lifting data transfer restrictions on all access keys.
       tags:
         - Access Key
         - Limit
