--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,25 +43,12 @@ jobs:
 
       - name: Lint
         run: yarn lint
-      
-      - name: Shadowbox
-        run: |
-          yarn do shadowbox/server/build
-          yarn do shadowbox/test
 
-      - name: Server Manager
+      - name: Manager
         run: |
           yarn do server_manager/electron_app/build
           yarn do server_manager/web_app/build
           yarn do server_manager/test
-      
-      - name: Metrics Server
-        run: |
-          yarn do metrics_server/build
-          yarn do metrics_server/test
-      
-      - name:  Sentry Webhook
-        run: yarn do sentry_webhook/build
 
   linux_only:
     name: Build and Test Shadowbox, Metrics Server, and Sentry Webhook
