--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+      # Don't cancel jobs on other platforms if one fails
+      fail-fast: false
 
-    
-    # Ideally we would run all the build steps in parallel.  We may be able to drastically reduce
-    # job startup overhead by caching the master branch and running 'git pull' as opposed to a full
-    # clone on every CI run.
+    shell: bash
+      
     steps:
       - name: Checkout repo
         uses: actions/checkout@v1
@@ -55,9 +55,6 @@ jobs:
 
     runs-on: ubuntu-latest
     
-    # Ideally we would run all the build steps in parallel.  We may be able to drastically reduce
-    # job startup overhead by caching the master branch and running 'git pull' as opposed to a full
-    # clone on every CI run.
     steps:
       - name: Checkout repo
         uses: actions/checkout@v1
