--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,10 @@ name: Build and Test
 
 on: push
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   manager:
     name: Build and Test Manager
@@ -12,8 +16,6 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
       # Don't cancel jobs on other platforms if one fails
       fail-fast: false
-
-    shell: bash
       
     steps:
       - name: Checkout repo
