--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "clean": "rm -rf src/*/node_modules/ build/ node_modules/ src/server_manager/install_scripts/do_install_script.ts",
     "do": "bash ./scripts/do_action.sh",
-    "lint": "tslint 'src/**/*.ts' -e '**/node_modules/**'"
+    "lint": "tslint 'src/**/*.ts' -e '**/node_modules/**'",
+    "shellcheck": "find src scripts -name *.sh -exec shellcheck {} +"
   },
   "workspaces": [
     "src/*"
