--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,13 +19,10 @@ jobs:
         with:
           node-version: 12
 
-      - name: Show Environment Info
-        run: |
-          yarn -v
-          shellcheck -V
-
       - name: Lint
-        run: yarn shellcheck
+        run: |
+          shellcheck -V
+          yarn shellcheck
 
   manager:
     name: Build and Test
@@ -67,7 +64,7 @@ jobs:
         run: yarn --prefer-offline
 
       - name: Lint
-        run: yarn lint
+        run: yarn tslint
 
       - name: Manager
         run: |
