Accept 6 or 28 from curl

--- a/src/shadowbox/integration_test/client/Dockerfile
+++ b/src/shadowbox/integration_test/client/Dockerfile
@@ -15,7 +15,7 @@
 FROM golang:1-alpine
 
 # curl for fetching pages using the local proxy
-RUN apk add --no-cache curl git bind-tools
+RUN apk add --no-cache curl git
 RUN go get github.com/shadowsocks/go-shadowsocks2
 
 ENTRYPOINT [ "sh" ]
