Prepare MacOS Manager for Release
  * Re-encrypt certificate with new credentials to add on GH Actions
  * Upgrade Sentry which was using an API removed in Electron 12
  * Upgrade electron-builder to fix an issue signing our bundled Electron

--- a/.github/workflows/release_manager.yml
+++ b/.github/workflows/release_manager.yml
@@ -48,8 +48,7 @@ jobs:
       - name: Release MacOS
         if: runner.os == 'macOS'
         run: |
-          openssl aes-256-cbc -K TODOENCRYPTEDKEY -iv TODOENCRYPTEDIV -in macos-signing-certificate.p12.enc -out macos-signing-certificate.p12 -d
-          pwd #TODO REMOVE
+          openssl aes-256-cbc -k $ENCRYPTED_SIGNING_CERT_KEY -iv  $ENCRYPTED_SIGNING_CERT_IV -in macos-signing-certificate.p12.enc -out macos-signing-certificate.p12 -d
           export CSC_LINK=$(pwd)/macos-signing-certificate.p12
           yarn do server_manager/electron_app/release_macos
 
