properly reference environment

--- a/.github/workflows/release_manager.yml
+++ b/.github/workflows/release_manager.yml
@@ -9,6 +9,7 @@ jobs:
   release_manager:
     name: Release Manager
     runs-on: ${{ matrix.os }}
+    environment: Deploy Outline Manager
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-latest]
@@ -48,9 +49,17 @@ jobs:
       - name: Release Linux
         if: runner.os == 'Linux'
         run: yarn do server_manager/electron_app/release_linux
+        env:
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
 
       - name: Release MacOS
         if: runner.os == 'macOS'
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          ENCRYPTED_SIGNING_CERT_IV: ${{ secrets.ENCRYPTED_SIGNING_CERT_IV }}
+          ENCRYPTED_SIGNING_CERT_KEY: ${{ secrets.ENCRYPTED_SIGNING_CERT_KEY }}
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
         run: |
           openssl aes-256-cbc -K $ENCRYPTED_SIGNING_CERT_KEY -iv  $ENCRYPTED_SIGNING_CERT_IV -in macos-signing-certificate.p12.enc -out macos-signing-certificate.p12 -d -md sha256
           export CSC_LINK=$(pwd)/macos-signing-certificate.p12
