Only create a Draft release since this isn't the final deployment bucket

--- a/.github/workflows/release_manager.yml
+++ b/.github/workflows/release_manager.yml
@@ -68,3 +68,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: "build/server_manager/electron_app/static/dist/*.*"
+          draft: true
