--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,12 @@ node_js:
   - "12"
 
 cache:
-  yarn: true
+  yarn: false
   directories:
     - $HOME/.cache/electron
     - $HOME/.cache/electron-builder
 
 before_install:
-  # https://docs.travis-ci.com/user/languages/javascript-with-nodejs#Travis-CI-supports-yarn
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.12.3
-  - export PATH="$HOME/.yarn/bin:$PATH"
   # Install latest Docker for BuildKit support if running on linux. See https://docs.travis-ci.com/user/docker/
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -51,15 +48,15 @@ jobs:
           curl -L https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m) > docker-compose
           chmod +x docker-compose
           sudo mv docker-compose /usr/local/bin
-        - yarn do shadowbox/test
-        - yarn do shadowbox/docker/build && cd src/shadowbox/integration_test && ./test.sh
+        - npm run do shadowbox/test
+        - npm run do shadowbox/docker/build && cd src/shadowbox/integration_test && ./test.sh
 
     - stage: "Deploy Server"
       name: Server Docker Image
       sudo: required
       services: docker
       script:
-        - yarn do shadowbox/docker/build
+        - npm run do shadowbox/docker/build
         - docker login quay.io -u="$QUAY_IO_USERNAME" -p="$QUAY_IO_PASSWORD"
         - docker tag outline/shadowbox quay.io/outline/shadowbox:$TRAVIS_TAG
         - docker push quay.io/outline/shadowbox:$TRAVIS_TAG
@@ -74,7 +71,7 @@ jobs:
         apt:
           packages:
           - rpm
-      script: yarn do server_manager/electron_app/release_linux
+      script: npm run do server_manager/electron_app/release_linux
 
     - stage: "Manager Release"
       os: osx
@@ -84,8 +81,8 @@ jobs:
       script:
         - openssl aes-256-cbc -K $encrypted_61a49da75942_key -iv $encrypted_61a49da75942_iv -in macos-signing-certificate.p12.enc -out macos-signing-certificate.p12 -d
         - export CSC_LINK=$(pwd)/macos-signing-certificate.p12
-        # Must run yarn again due to the OS change, required for signing to work.
-        - yarn && yarn do server_manager/electron_app/release_macos
+        # Must run npm again due to the OS change, required for signing to work.
+        - npm install && npm run do server_manager/electron_app/release_macos
 
 deploy:
   provider: releases
