--- a/package.json
+++ b/package.json
@@ -6,27 +6,29 @@
     "clang-format": "^1.2.2",
     "husky": "^1.3.1",
     "jasmine": "^3.5.0",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.1",
     "tslint": "^5.9.1",
     "typescript": "^4"
   },
   "engines": {
-    "yarn": ">=1.0",
-    "node": "^12"
+    "node": ">=14.0.0",
+    "npm": ">=7.0.0"
   },
   "scripts": {
     "clean": "rm -rf src/*/node_modules/ build/ node_modules/ src/server_manager/install_scripts/do_install_script.ts src/server_manager/install_scripts/gcp_install_script.ts third_party/shellcheck/download/",
     "do": "bash ./scripts/do_action.sh",
     "actions": "find . -name '*_action.sh' | sed -E 's:./src/(.*)_action.sh:\\1:' | grep -v 'scripts/do_action'",
-    "lint": "yarn shellcheck && yarn tslint",
+    "lint": "npm run shellcheck && npm run tslint",
     "shellcheck": "bash ./scripts/shellcheck.sh",
-    "tslint": "tslint 'src/**/*.ts' -e '**/node_modules/**'"
+    "tslint": "npx tslint 'src/**/*.ts' -e '**/node_modules/**'"
   },
   "workspaces": [
     "src/*"
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run lint && yarn git-clang-format && yarn pretty-quick --staged --pattern '**/*.html'"
+      "pre-commit": "npm run lint && npx git-clang-format && npx pretty-quick --staged --pattern '**/*.html'"
     }
   }
 }
