trying this tip out of hand - will make platform a env var next

--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -18,7 +18,7 @@ ARG NODE_IMAGE
 # Run `yarn` and build inside the container to package the right dependencies for the image.
 FROM ${NODE_IMAGE} AS build
 
-RUN apk add --no-cache bash
+RUN apk add --no-cache --upgrade bash
 WORKDIR /
 
 # Don't copy node_modules and other things not needed for install.
@@ -44,7 +44,7 @@ LABEL shadowbox.github.release="${GITHUB_RELEASE}"
 
 # We use curl to detect the server's public IP. We need to use the --date option in `date` to
 # safely grab the ip-to-country database
-RUN apk add --no-cache coreutils curl
+RUN apk add --no-cache --upgrade coreutils curl
 
 COPY src/shadowbox/scripts scripts/
 COPY src/shadowbox/scripts/update_mmdb.sh /etc/periodic/weekly/update_mmdb
